[tool.poetry]
name = "morelia"
version = "0.8.3"
description="for \"Behavior Driven Development\" (BDD) -- a client-facing scripting language to put the squeeze on all your features"
license="MIT"
authors = ["dryobates <jakub.stolarski@gmail.com>"]
readme="README.rst"
repository="https://github.com/kidosoft/morelia"
documentation="https://morelia.readthedocs.io/en/latest/"
keywords=["test", "bdd", "behavior"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.5"
parse = "^1.12.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.7"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
sphinx-rtd-theme = "^0.4.3"
pytest-black = { version = "^0.3.3", python = "^3.6" }
black = { version = "^18.9b0", python = "^3.6" }

[tool.morelia.default] 
wip=false 
matchers=["parse", "regex", "method"] 
[[tool.morelia.default.output]]
format="terminal"
color=false
[[tool.morelia.default.output]]
format="html"
file="output/{feature}.html"
[[tool.morelia.default.output]]
format="json"
dest="file://output/{feature}.json"
# dest="http://example.com"
[[tool.morelia.default.output]]
format="text"
file="output/{feature}.txt"
strategy="append"
[[tool.morelia.default.output]]
format="text"
file="output/{feature}/{scenario}.txt"
strategy="override"
[[tool.morelia.default.output]]
format="text"
file="output/result.txt"
strategy="append"
[[tool.morelia.default.output]]
format="rst"
file="output/{feature}.rst"
[[tool.morelia.default.output]]
format="markdown"
file="output/{feature}.md"
[[tool.morelia.default.output]]
format="xml"
file="output/{feature}.xml"
[[tool.morelia.default.output]]
format="json"
url="http://example.com"

[tool.morelia.custom1] 
wip=true 
matchers=["parse"] 
[[tool.morelia.custom1.output]]
format="terminal"
color=true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

