[tool.poetry]
name = "morelia"
version = "0.9.2"
description="for \"Behavior Driven Development\" (BDD) -- a client-facing scripting language to put the squeeze on all your features"
license="MIT"
authors = ["dryobates <jakub.stolarski@gmail.com>"]
readme="README.rst"
repository="https://github.com/kidosoft/morelia"
documentation="https://morelia.readthedocs.io/en/latest/"
keywords=["test", "bdd", "behavior"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
]

[tool.poetry.dependencies]
python = "^3.6.2"
parse = "^1.12.0"
requests = "^2.21"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.0"
pytest-black = "^0.3.12"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
sphinx-rtd-theme = "^0.4.3"
tox = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
